# xi-yew-wasm-rs

./: .gitignore  Cargo.toml  README.md
crates/client/: Cargo.toml
crates/client/src/: bus.rs  lib.rs  line.rs  main.rs  socket.rs  view.rs
crates/client/www/: main.js
crates/core/: Cargo.toml
crates/core/src/: lib.rs  messages.rs
src/: lib.rs  main.rs  xi.rs
