[package]
name = "zn"
version = "0.1.0"
authors = ["nconnor <nicholas.k.connor@gmail.com>"]
edition = "2018"

[[bin]]
name = "zn"
path = "src/main.rs"

[dependencies]
async-std = "1.4.0"
async-tungstenite = "0.3.1"
tungstenite = "0.9.2"
bincode = "1.2.1"
futures = "0.3.1"

log = { version = "0.4", features = ["max_level_debug", "release_max_level_debug"] }
simple_logger = "1.3.0"

serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
web-view = "0.6.0"
xi-core-lib = "0.3.0"
xi-rpc = "0.3.0"
yew = "0.11.0"
zn-core = { path = "crates/core" }


[workspace]
members = [
  "crates/client",
  "crates/core",
]